# gig

./: .gitignore  CMakeLists.txt  HANDOFF.md  LICENSE.md  PLAN.md  README.md  RELEASING.md  gig.ini.example  vcpkg-configuration.json  vcpkg.json
.github/workflows/: _release.yml  homebrew-tap.yml  ios-ci.yml  macos-ci.yml  release-manual.yml  release-tag.yml  windows-ci.yml  winget.yml
docs/: PAIRING.md  RELEASING.md
ios/: Info.plist
ios/gig/: PrivacyInfo.xcprivacy
ios/gig.xcodeproj/: project.pbxproj
ios/gig.xcodeproj/xcshareddata/xcschemes/: gig.xcscheme
ios/gig/App/: GigApp.swift
ios/gig/Bridge/: GigBridge.h  GigBridge.mm  GigBridgeInternal.h  GigRenderer.h  GigRenderer.mm
ios/gig/UI/: ContentView.swift  LocalNetworkProbe.swift  LogView.swift  MetalVideoView.swift  OnboardingViews.swift  SettingsView.swift
resources/: Info.plist.in  gig.entitlements  gig.manifest  gig.mas.entitlements  gig.rc  version.rc.in
resources/msix/: AppxManifest.xml.in
scripts/: build_ios.sh  build_ios_appstore.sh  build_macos.sh  build_macos_mas.sh  build_windows.ps1  bump_version.sh  make_icns.sh  make_icon.ps1  package_windows_msix.ps1  probe_frigate_ws.ps1  seed_settings.ps1  setup_ios_vcpkg.sh
src/: d3d11_decode_context.h  log.cpp  log.hpp  main.cpp  video_frame.h
src/app/: activity_gate.cpp  activity_gate.h  app_session.cpp  app_session.h  camera_supervisor.cpp  camera_supervisor.h
src/decode/: ffmpeg_decoder.cpp  ffmpeg_decoder.h
src/discovery/: frigate_discovery.cpp  frigate_discovery.h
src/health/: stream_health.cpp  stream_health.h
src/net/: cert_pin.cpp  cert_pin.hpp  cng_tls.cpp  cng_tls.hpp  cookie_jar.cpp  cookie_jar.hpp  frigate_auth.cpp  frigate_auth.hpp  frigate_events.cpp  frigate_events.hpp  http_client.cpp  http_client.hpp  system_trust_ios.mm  system_trust_mac.h  system_trust_mac.mm  tls_client.cpp  tls_client.hpp  tls_context.cpp  tls_context.hpp  tls_options.h  tls_session_cache.cpp  tls_session_cache.hpp  url.h  win_cert_store.cpp  win_cert_store.h
src/platform/: settings_store.hpp  settings_store_mac.mm  settings_store_win.cpp
src/probe/: cert_probe.cpp  cert_probe.h  http_probe.cpp  http_probe.h
src/render/: d3d11_renderer.cpp  grid_layout.cpp  grid_layout.h  metal_renderer.mm  metal_scene.h  metal_scene.mm  quiet_status.h  status_panel.cpp  status_panel.h  text_overlay.cpp  text_overlay.h  tile_box.h  video_renderer.h
src/ui/: app_menu.h  app_menu_mac.mm  pin_prompt.h  pin_prompt_mac.mm  pin_prompt_win.cpp  resource.h  settings_dialog.cpp  settings_dialog.h  settings_dialog_mac.mm
vcpkg-ports/ffmpeg/: portfile.cmake
vcpkg-triplets/: arm64-ios-simulator.cmake  arm64-ios.cmake  arm64-osx-macos14.cmake  x64-osx-macos14.cmake
